0MQ version 4.3.1 stable, released on 20xx/xx/xx
================================================

* The following DRAFT APIs have been marked as STABLE and will not change
  anymore:
  - ZMQ_MSG_T_SIZE context option (see doc/zmq_ctx_get.txt)

* Fixed #2820 - further clarify ZMQ_XPUB_VERBOSE(R) documentation.


0MQ version 4.2.3 stable, released on 2017/12/13
================================================

* API change: previously ZMQ_POLLOUT on a ZMQ_ROUTER socket returned always
  true due to how the type works. When ZMQ_ROUTER_MANDATORY is set, sending
  fails when the peer is not available, but ZMQ_POLLOUT always returns true
  anyway, which does not make sense. Now when ZMQ_ROUTER_MANDATORY is set,
  ZMQ_POLLOUT on a ZMQ_ROUTER will return true only if at least one peer is
  available.
  Given ZMQ_POLLOUT with ZMQ_ROUTER was not usable at all previously, we do
  not consider this a breakage warranting a major or minor version increase.

* ZMQ_IDENTITY has been renamed to ZMQ_ROUTING_ID and ZMQ_CONNECT_RID has been
  renamed to ZMQ_CONNTECT_ROUTING_ID to disambiguate. ZMQ_IDENTITY and
  ZMQ_CONNECT_RID are still available to keep backward compatibility, and will
  be removed in a future release after further advance notice.

* DRAFT API change: zmq_poller_wait, zmq_poller_wait_all and zmq_poller_poll
  have been changed to be inline with other existing APIs that have a timeout
  to return EAGAIN instead of ETIMEDOUT as the errno value.
  See #2713 for details.

* Existing non-DRAFT socket types ZMQ_REP/REQ, ZMQ_ROUTER/DEALER and
  ZMQPUB/SUB, that were previously declared deprecated, have been reinstated
  as stable and supported. See #2699 for details.

* Tweetnacl: add support for, and use preferably if available, getrandom() as
  a simpler and less error-prone alternative to /dev/urandom on OSes where it
  is available (eg: Linux 3.18 with glibc 2.25).

* Curve: all remaining traces of debug output to console are now removed, and